2005-08-06  John Luke  <john.luke@gmail.com>

	* SourceEditor.mdp: update
	
2005-08-03  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelopEditor.addin.xml: Removed old menu entries.

2005-07-27  Lluis Sanchez Gual  <lluis@novell.com> 

	* Gui/SourceEditorDisplayBinding.cs: Make sure the PropertyChanged
	handler runs in the gui thread.

2005-07-22  John Luke  <john.luke@gmail.com>

	* SourceEditor.mdp: remove completion files moved into Base assembly

2005-07-20  Lluis Sanchez Gual  <lluis@novell.com> 

	* Gui/SourceEditorWidget.cs: Factorized some code into
	SearchReplaceManager.

2005-07-20  Peter Johanson  <latexer@gentoo.org>

	* CodeCompletion/*: Migrated to MonoDevelop.Base assembly.
	* Makefile.am: Remove CodeCompletion file entries.
	* Gui/SourceEditorView.cs:
	* InsightWindow/InsightWindow.cs:
	* InsightWindow/IndexerInsightDataProvider.cs:
	* InsightWindow/MethodInsightDataProvider.cs: Changed to reflect
	completion API/location changes.

2005-07-20  Lluis Sanchez Gual  <lluis@novell.com> 

	* Gui/SourceEditorWidget.cs: Implemented FindPrevious command.
	* Gui/SourceEditorDisplayBinding.cs: Implemented SelectionStartPosition
	and SelectionEndPosition properties. Implemented an ITextIterator
	that supports SourceView's native search methods.
	* MonoDevelopEditor.addin.xml: Added FindPrevious command to the menu.

2005-07-13  John Luke  <john.luke@gmail.com>

	* Gui/SourceEditorView.cs: make DeleteLine () use AtomicUndo
	remove incorrect special case for shift + del as it is = cut
	and control + k for DeleteLine like emacs
	fixes bug #75425, based on patch by Paul.Betts@Gmail.com (Paul Betts)

2005-07-13  John Luke  <john.luke@gmail.com>

	* CodeCompletion/ListWindow.cs: scroll with the mousewheel
	* CodeCompletion/CompletionListWindow.cs: complete on double-click

2005-07-13  Lluis Sanchez Gual  <lluis@novell.com> 

	* Gui/SourceEditorDisplayBinding.cs: The editor is now responsible
	of showing its own widgets.
	